# poly-web3

./: .gitignore  CHANGELOG.md  README.en.md  README.md  README.zh.legacy.md  README.zh.md  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
analysis_poly/: __init__.py  analyzer.py  market_cache.py  market_result_cache.py  models.py  open_with_params.py  polymarket_client.py  profit_engine.py  raw_api_cache.py  report_merge.py  run_manager.py  storage_paths.py  web.py
frontend/src/: App.jsx  constants.js  styles.css
frontend/src/components/: AdvancedModal.jsx  ConfigPanel.jsx  InsightCharts.jsx  PnlCharts.jsx  QuantMetricsPanel.jsx  StatusCard.jsx
poly_web3/web3_service/: api_client.py  base.py  proxy_service.py  safe_service.py
scripts/: analysis-poly  analysis-poly-open
tests/analysis/: test_analyzer_filter_empty_market.py  test_analyzer_market_cache.py  test_market_result_cache.py  test_models_defaults.py  test_polymarket_fee_rate_parse.py  test_profit_engine.py  test_raw_api_cache.py  test_report_merge.py  test_run_manager.py  test_session_analytics.py  test_storage_paths.py  test_turnover_curve.py
tests/sdk/: test_neg_risk_split_merge.py
